--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,8 @@ spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 spring.h2.console.enabled=true
+logging.level.org.hibernate.SQL=DEBUG
+spring.jpa.show-sql=true
 
 
 server.port=8081
